--- a/index.html
+++ b/index.html
@@ -7,15 +7,17 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div class="Logo">
-            <b>Xsmer Pack</b>
-        </div>
-        <div class="Menu">
-            <ul>
-                <li><a href="#"><b>Home</b></a></li>
-                <li><a href="#"><b>Downloads</b></a></li>
-                <li><a href="#"><b>About Me</b></a></li>
-            </ul>
-        </div>
+        <nav class="Pasek">
+            <div class="Logo">
+                <b>Xsmer Pack</b>
+            </div>
+            <div class="Menu">
+                <ul>
+                    <li><a href="#"><b>Home</b></a></li>
+                    <li><a href="#"><b>Downloads</b></a></li>
+                    <li><a href="#"><b>About Me</b></a></li>
+                </ul>
+            </div>
+        </nav>
     </body>
 </html>
