--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
             </div>
             <div class="Menu">
                 <ul>
-                    <li><a href="#"><b>Home</b></a></li>
-                    <li><a href="#"><b>Downloads</b></a></li>
+                    <li><a href="Sites/downloads.html"><b>Downloads</b></a></li>
                     <li><a href="#"><b>About Me</b></a></li>
                 </ul>
             </div>
