--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Xsmer Pack</title>
         <link rel="stylesheet" href="style.css">
+        <script src="javascripts/MainSite.js"></script>
     </head>
     <body>
         <nav class="Pasek">
@@ -14,7 +15,7 @@
             <div class="Menu">
                 <ul>
                     <li><a href="Sites/downloads.html"><b>Downloads</b></a></li>
-                    <li><a href="#"><b>About Me</b></a></li>
+                    <li><a href="Sites/aboutme.html"><b>About Me</b></a></li>
                 </ul>
             </div>
         </nav>
