--- a/Sites/downloads.html
+++ b/Sites/downloads.html
@@ -14,7 +14,7 @@
                 Here you can Download all Xsmer Pack's for specific Minecraft Version
             </div>
             <ul>
-                <li><a href="../../resources/Mods1.zip" download="Mods.zip" target="_blank">Minecraft - 1.16.5</a></li>
+                <li><a href="../resources/Mods1.zip" download="Mods.zip" target="_blank">Minecraft - 1.16.5</a></li>
                 <br>
                 <li><a href="#">Minecraft - 1.12.2</a></li>
                 <div style="color: red;"><b><i>- This Version is Not Now Avaible</i></b></div>
